overflow fix

--- a/style.styl
+++ b/style.styl
@@ -43,6 +43,7 @@ html
   font-weight: 400
   font-size: 18px
   line-height: 1.5
+  overflow-x: hidden
 
   @media mq-mobile
     font-size: 16px
